--- a/book_table.html
+++ b/book_table.html
@@ -4,12 +4,17 @@
         <title>표 - 기본표현</title>
     </head>
     <body>
-        <h3>기본적인 표의 표현</h3>
+        <h3>표의 구조적인 표현</h3>
         <table border="1">
+            <caption>과목별 추천도서</caption>
             <tr>
+                <th>과목</th>
                 <th>책제목</th>
                 <th>저자</th>
                 <th>출판사</th>
+            </tr>
+            <tr>
+                <td rowspan="4">웹프로그래밍</td>
             </tr>
             <tr>
                 <td>HTML5 웹프로그래밍 입문</td>
@@ -25,6 +30,10 @@
                 <td>What Is HTML5?</td>
                 <td>B.McLaughlin</td>
                 <td>O'Reilly</td>
+            </tr>
+            <tr>
+                <th>합계</th>
+                <td colspan="3">3권</td>
             </tr>
         </table>
 
